--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -19,25 +19,19 @@ body {
   align-items: center;
 }
 
-/* button {
+button {
   background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
+  padding: 8px 16px;
+  margin-right: 4px;
 }
 
 button:hover {
-  transform: scale(1.05);
+  /* transform: scale(1.01); */
+  background-color: #efefef;
   opacity: 1;
 }
 
+/*
 li {
   list-style: none;
 }
