--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -1,5 +1,6 @@
 @import './color';
 @import './spacing';
+@import './button-state';
 
 body {
   position: relative;
@@ -14,8 +15,8 @@ body {
 }
 
 button {
+  @extend %button-state;
   color: $black;
-  background: $secondary-default;
   padding: $spacing-s $spacing-m;
   margin: $spacing-xs;
   border: none;
@@ -24,27 +25,6 @@ button {
   &.small {
     padding: $spacing-xs $spacing-s;
     height: fit-content;
-  }
-
-  &:focus-visible {
-    outline: 2px solid $white;
-  }
-
-  &:hover {
-    color: $white;
-    background: $secondary-dark;
-    cursor: pointer;
-  }
-
-  &:active {
-    color: $white;
-    background: $secondary-darker;
-  }
-
-  &:disabled {
-    color: $black;
-    background: $primary-light;
-    cursor: default;
   }
 }
 
