Factor out basic components and improve styles

--- a/src/renderer/styles/_color.scss
+++ b/src/renderer/styles/_color.scss
@@ -4,6 +4,7 @@
 $primary-dark: #1c313a;
 $primary-default: #455a64;
 $primary-light: #718792;
+$primary-lighter: #a0b7c2;
 
 // Secondary
 $secondary-darker: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
