--- a/src/renderer/styles/_spacing.scss
+++ b/src/renderer/styles/_spacing.scss
@@ -4,4 +4,5 @@ $spacing-xs: 4px;
 $spacing-s: 8px;
 $spacing-m: 16px;
 $spacing-l: 24px;
-$spacing-xl: 48px;
+$spacing-xl: 36px;
+$spacing-xxl: 48px;
