--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -28,4 +28,13 @@ $band-width: 64px;
     width: $band-width;
     gap: $spacing-s;
   }
+
+  .sliderButtons {
+    height: $band-height;
+    justify-content: center;
+    div {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
+  }
 }
