--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -36,5 +36,10 @@ $band-width: 64px;
       margin-top: $spacing-xs;
       margin-bottom: $spacing-xs;
     }
+
+    .sliderButton {
+      height: 100px;
+      width: 24px;
+    }
   }
 }
