--- a/src/renderer/styles/_button-state.scss
+++ b/src/renderer/styles/_button-state.scss
@@ -23,4 +23,10 @@
     background: $primary-light;
     cursor: default;
   }
+
+  &.disabled {
+    pointer-events: none;
+    background: $primary-light;
+    cursor: default;
+  }
 }
