Add additional filters

--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -40,3 +40,25 @@ body {
   justify-content: center;
   text-align: center;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background: $primary-lighter;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: $primary-light;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $primary-default;
+}
