Add arrow key functionality

--- a/src/renderer/styles/Dropdown.scss
+++ b/src/renderer/styles/Dropdown.scss
@@ -88,7 +88,7 @@
       align-content: center;
       font-size: small;
 
-      &:hover,
+      &:focus,
       &:focus-visible {
         background: $secondary-darker;
         outline: none;
