Add custom title bar and update layout styles

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -9,6 +9,9 @@
     <title>AQUA</title>
   </head>
   <body>
+    <header class="titlebar row">
+      <span>AQUA</span>
+    </header>
     <div id="root"></div>
   </body>
 </html>
