--- a/src/renderer/styles/SideBar.scss
+++ b/src/renderer/styles/SideBar.scss
@@ -3,9 +3,10 @@
 @import 'spacing';
 
 .sideBar {
-  height: 100%;
   width: calc(100% - $content-width);
   gap: $spacing-m;
   padding: $spacing-s;
-  border-right: 2px solid $white;
+
+  border-radius: 16px;
+  background: $primary-default;
 }
