--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -40,6 +40,7 @@ $band-width: 64px;
 
   .bands {
     justify-content: space-between;
+    padding: 0 2px; // add some horizontal padding so the outline isn't cut off at either end
     width: 100%;
     gap: $spacing-s;
     overflow-x: auto;
