Allow auto preamp to work without graph showing

--- a/src/renderer/styles/SideBar.scss
+++ b/src/renderer/styles/SideBar.scss
@@ -9,7 +9,7 @@
   border-radius: $spacing-m;
   background: $primary-default;
 
-  .switch[for='chartEnabler'] {
+  .switch[for='graphViewEnabler'] {
     margin-bottom: 1em;
   }
 
