Fix cucumber tests, show arrows in gain input

--- a/src/renderer/styles/NumberInput.scss
+++ b/src/renderer/styles/NumberInput.scss
@@ -55,6 +55,7 @@ $input-height: 24px;
     visibility: hidden;
     flex-direction: column;
     gap: 2px;
+    padding: 2px;
 
     svg {
       width: 12px;
