Rename modal buttons and other fixes

--- a/src/renderer/styles/Button.scss
+++ b/src/renderer/styles/Button.scss
@@ -22,6 +22,10 @@ $button-height: 100px;
     height: fit-content;
   }
 
+  &.default {
+    padding: $spacing-s $spacing-m;
+  }
+
   path {
     fill: $white;
   }
