Add edit mode for preset bar list item

--- a/src/renderer/styles/AddSliderDivider.scss
+++ b/src/renderer/styles/AddSliderDivider.scss
@@ -7,7 +7,7 @@
   padding: 0 $spacing-s;
 
   .divider {
-    width: 2px;
+    width: $spacing-xxs;
     height: calc(250px / 2 - 12px - $spacing-m);
     background: $secondary-default;
   }
