--- a/src/renderer/styles/List.scss
+++ b/src/renderer/styles/List.scss
@@ -11,7 +11,7 @@
   // Apply custom styles
   background: $primary-dark;
   color: $white;
-  border: solid 2px $secondary-default;
+  border: solid $spacing-xxs $secondary-default;
   border-radius: 4px;
   text-align: start;
 
