--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -15,7 +15,7 @@
   justify-items: center;
 
   border-radius: $spacing-m;
-  border: 2px solid $secondary-default;
+  border: $spacing-xxs solid $secondary-default;
 
   .bandLabel {
     height: $band-height;
@@ -41,7 +41,7 @@
   .bands {
     position: relative;
     justify-content: flex-start;
-    padding: 0 2px; // add some horizontal padding so the outline isn't cut off at either end
+    padding: 0 $spacing-xxs; // add some horizontal padding so the outline isn't cut off at either end
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
