--- a/src/renderer/styles/RangeInput.scss
+++ b/src/renderer/styles/RangeInput.scss
@@ -1,4 +1,5 @@
 @import 'color';
+@import 'spacing';
 @import 'button-state';
 
 $range-track-width: 150px;
@@ -27,7 +28,7 @@ $range-thumb-height: 20px;
       outline: none;
 
       &::-webkit-slider-runnable-track {
-        box-shadow: 0px 0px 0px 2px white;
+        box-shadow: 0px 0px 0px $spacing-xxs white;
       }
     }
 
