--- a/src/renderer/styles/Switch.scss
+++ b/src/renderer/styles/Switch.scss
@@ -1,4 +1,5 @@
 @import 'color';
+@import 'spacing';
 
 $switch-button-height: 20px;
 $switch-padding: 8px;
@@ -44,7 +45,7 @@ $switch-padding: 8px;
   // Apply same style regardless of checked state when focused
   &:focus-visible + .switch-label,
   &:focus-visible + .switch-label .switch-button {
-    outline: 2px solid $white;
+    outline: $spacing-xxs solid $white;
   }
 
   &:not(:checked) {
