--- a/src/renderer/styles/TextInput.scss
+++ b/src/renderer/styles/TextInput.scss
@@ -3,7 +3,7 @@
 .textInput {
   background: $primary-dark;
   color: $white;
-  border: solid 2px $secondary-default;
+  border: solid $spacing-xxs $secondary-default;
   border-radius: 4px;
   padding: $spacing-xs;
   font-size: small;
@@ -14,6 +14,6 @@
   align-items: center;
 
   &:focus-visible {
-    outline: 2px solid $white;
+    outline: $spacing-xxs solid $white;
   }
 }
