Add scroll, show icons on hover, and remove unnecessary div

--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -49,6 +49,7 @@ body {
 .parameteric-wrapper {
   flex: 0;
   gap: $spacing-s;
+  height: $equalizer-height;
 }
 
 .graph-wrapper {
@@ -82,6 +83,7 @@ body {
 /** Scrollbar styles */
 ::-webkit-scrollbar {
   height: 8px;
+  width: 8px;
 }
 
 // Scrollbar track
