Improve style for long preset names and make textinput more robust

--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -13,6 +13,7 @@
   // Sizing of the wraooer
   height: calc(100% - 2 * $spacing-m);
   min-width: $presetbar-width;
+  max-width: $presetbar-width;
 
   // Styling of the background wrapper
   border-radius: $spacing-m;
@@ -37,7 +38,7 @@
   }
 
   .presetListItem {
-    height: $spacing-l;
+    min-height: $spacing-l;
     padding: $spacing-xs $spacing-s;
     justify-content: space-between;
     align-items: center;
