PR feedback, fix filter type dropdown styles, add check for existing preset in input

--- a/src/renderer/styles/FrequencyBand.scss
+++ b/src/renderer/styles/FrequencyBand.scss
@@ -15,6 +15,11 @@
     .numberInput,
     .dropdown {
       align-self: center;
+
+      .list {
+        // Hide scroll bar for the filter type dropdown
+        overflow-y: hidden;
+      }
     }
 
     &::before,
