--- a/src/renderer/styles/FrequencyBand.scss
+++ b/src/renderer/styles/FrequencyBand.scss
@@ -12,7 +12,7 @@
   .band {
     // width: $band-width;
     gap: $spacing-s;
-    .numberInput,
+    .number-input,
     .dropdown {
       align-self: center;
 
