--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -2,7 +2,7 @@
 @import 'color';
 @import 'spacing';
 
-.presetsBar {
+.presets-bar {
   // Spacing of the contents
   display: grid;
   grid-template-rows: repeat(3, min-content) auto min-content;
@@ -12,8 +12,8 @@
 
   // Sizing of the wraooer
   height: calc(100% - 2 * $spacing-m);
-  min-width: $presetbar-width;
-  max-width: $presetbar-width;
+  min-width: $preset-bar-width;
+  max-width: $preset-bar-width;
 
   // Styling of the background wrapper
   border-radius: $spacing-m;
@@ -29,7 +29,7 @@
   }
 
   // Adjust spacing for preset name input field
-  .presetName {
+  .preset-name {
     width: 100%;
 
     input[type='text'] {
@@ -37,7 +37,7 @@
     }
   }
 
-  .presetListItem {
+  .preset-list-item {
     min-height: $spacing-l;
     padding: $spacing-xs $spacing-s;
     justify-content: space-between;
