--- a/src/renderer/styles/TextInput.scss
+++ b/src/renderer/styles/TextInput.scss
@@ -1,6 +1,6 @@
 @import 'color';
 @import 'spacing';
-.textInput {
+.text-input {
   background: $primary-dark;
   color: $white;
   border: solid $spacing-xxs $secondary-default;
