--- a/src/renderer/styles/_constant.scss
+++ b/src/renderer/styles/_constant.scss
@@ -1,7 +1,7 @@
 $content-width: 100%;
-$sidebar-width: 150px;
-$presetbar-width: 328px;
-$titlebar-height: 28px;
+$side-bar-width: 150px;
+$preset-bar-width: 328px;
+$title-bar-height: 28px;
 
 $band-height: 498px;
 $band-width: 64px;
