--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -9,7 +9,7 @@
     <title>AQUA</title>
   </head>
   <body>
-    <header class="titlebar row">
+    <header class="title-bar row">
       <span>AQUA</span>
     </header>
     <div id="root"></div>
