--- a/src/renderer/styles/NumberInput.scss
+++ b/src/renderer/styles/NumberInput.scss
@@ -3,10 +3,10 @@
 
 $input-height: 24px;
 
-.numberInput {
+.number-input {
   gap: $spacing-s;
 
-  .inputWrapper {
+  .input-wrapper {
     position: relative; // necessary so that the absolutely positioned asterisks will scroll with the input
     border: $spacing-xxs solid $secondary-default;
     border-radius: 4px;
