Switch to grid-template

--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -5,11 +5,11 @@
 // band width and height from constants file
 
 .main-content {
-  width: $content-width;
+  grid-area: main-content;
   display: grid;
   grid-template-columns: 128px 1fr;
-  grid-template-rows: 100%;
   gap: $spacing-s;
+
   // Add additional space to the right to balance the spacing better
   padding: $spacing-s $spacing-l $spacing-s $spacing-s;
   justify-items: center;
