--- a/src/renderer/styles/_constant.scss
+++ b/src/renderer/styles/_constant.scss
@@ -1,5 +1,3 @@
-$content-width: 100%;
-$side-bar-width: 150px;
 $preset-bar-width: 328px;
 $title-bar-height: 28px;
 
@@ -7,3 +5,6 @@ $band-height: 498px;
 $band-width: 64px;
 
 $equalizer-height: 580px;
+
+// NumberInput
+$input-height: 24px;
