--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -22,9 +22,13 @@ body {
     height: calc(100vh - $title-bar-height - $spacing-m - $spacing-s);
     width: calc(100vw - 2 * $spacing-m);
 
-    // Add flex so we can split space bweteen parametric and graph views
-    display: flex;
-    flex-direction: column;
+    // Add grid for layout
+    display: grid;
+    grid-template-areas:
+      'side-bar main-content presets-bar'
+      'graph-wrapper graph-wrapper graph-wrapper';
+    grid-template-columns: max-content 1fr $preset-bar-width;
+    grid-template-rows: $equalizer-height 1fr;
     gap: $spacing-s;
   }
 }
@@ -46,14 +50,8 @@ body {
   }
 }
 
-.parameteric-wrapper {
-  flex: 0;
-  gap: $spacing-s;
-  height: $equalizer-height;
-}
-
 .graph-wrapper {
-  flex: 1;
+  grid-area: graph-wrapper;
   border-radius: $spacing-m;
   border: $spacing-xxs solid $secondary-default;
 }
