--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -3,17 +3,14 @@
 @import 'spacing';
 
 .presets-bar {
+  grid-area: presets-bar;
+
   // Spacing of the contents
   display: grid;
-  grid-template-rows: repeat(3, min-content) auto min-content;
+  grid-template-rows: repeat(3, min-content) 1fr min-content;
   padding: $spacing-m;
   gap: $spacing-s;
   justify-items: center;
-
-  // Sizing of the wraooer
-  height: calc(100% - 2 * $spacing-m);
-  min-width: $preset-bar-width;
-  max-width: $preset-bar-width;
 
   // Styling of the background wrapper
   border-radius: $spacing-m;
