--- a/src/renderer/styles/TextInput.scss
+++ b/src/renderer/styles/TextInput.scss
@@ -1,19 +1,28 @@
 @import 'color';
 @import 'spacing';
 .text-input {
-  background: $primary-dark;
-  color: $white;
-  border: solid $spacing-xxs $secondary-default;
-  border-radius: 4px;
-  padding: $spacing-xs;
-  font-size: small;
-  // width: 52px;
-  // height: 18px;
-  justify-content: space-between;
-  align-content: center;
-  align-items: center;
+  flex: 1;
 
-  &:focus-visible {
-    outline: $spacing-xxs solid $white;
+  input[type='text'] {
+    background: $primary-dark;
+    color: $white;
+    border: solid $spacing-xxs $secondary-default;
+    border-radius: 4px;
+    padding: $spacing-xs;
+    font-size: small;
+    // width: 52px;
+    // height: 18px;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+
+    &:focus-visible {
+      outline: $spacing-xxs solid $white;
+    }
+
+    &[aria-invalid='true'] {
+      border: solid $spacing-xxs $red;
+      outline: $spacing-xxs solid $red;
+    }
   }
 }
