--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -25,12 +25,19 @@ body {
     // Add grid for layout
     display: grid;
     grid-template-areas:
-      'side-bar main-content presets-bar'
+      'side-bar middle-content presets-bar'
       'graph-wrapper graph-wrapper graph-wrapper';
     grid-template-columns: minmax($sidebar-width, max-content) 1fr $preset-bar-width;
-    grid-template-rows: $equalizer-height 1fr;
+    grid-template-rows: $equalizer-height repeat(1fr, 2);
     gap: $spacing-s;
   }
+}
+
+.middle-content {
+  grid-area: middle-content;
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  gap: $spacing-s;
 }
 
 .title-bar {
