Refactor presetNames to use a reducer for state updates

--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -43,6 +43,14 @@
       .iconButton {
         outline: none;
 
+        &:hover svg path {
+          fill: $primary-lighter;
+        }
+
+        &:active svg path {
+          fill: $primary-light;
+        }
+
         &:focus-visible:not([aria-disabled='true']) {
           path {
             fill: $primary-lighter;
