--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -27,8 +27,16 @@ body {
     grid-template-areas:
       'side-bar main-content presets-bar'
       'graph-wrapper graph-wrapper graph-wrapper';
-    grid-template-columns: minmax($sidebar-width, max-content) 1fr $preset-bar-width;
+    grid-template-columns: $sidebar-width 1fr $preset-bar-width;
+
+    // Keep fixed height for equalizer when graph view is on
     grid-template-rows: $equalizer-height 1fr;
+
+    &.minimized {
+      grid-template-areas: 'side-bar main-content presets-bar';
+      // Forcibly allow equalizer content to grow when graph view is off
+      grid-template-rows: 1fr;
+    }
     gap: $spacing-s;
   }
 }
