--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -18,24 +18,20 @@
   border: $spacing-xxs solid $secondary-default;
 
   .band-label {
-    height: $band-height;
-    justify-content: flex-start;
-    gap: $spacing-s;
+    height: 100%;
+    display: grid;
 
-    div {
-      justify-content: space-around;
-      height: 100%;
-    }
-
-    .row-label {
-      margin: $spacing-s 0;
-    }
-
-    &::before,
-    &::after {
-      // Insert space above and below band so scrollbar has padding
-      content: ' ';
-    }
+    grid-template-rows:
+      0px // top padding
+      30px // filter type
+      36px // frequency
+      24px // top arrow
+      min-content 1fr min-content 1fr min-content
+      24px // bottom arrow
+      36px // gain
+      36px // quality
+      0px; // bottom padding
+    gap: 8px;
   }
 
   .bands {
