--- a/src/renderer/styles/_constant.scss
+++ b/src/renderer/styles/_constant.scss
@@ -9,3 +9,6 @@ $equalizer-height: 580px;
 
 // NumberInput
 $input-height: 24px;
+
+// FrequencyBand and AddSliderDivider
+$sort-animate-duration: 500ms;
