--- a/src/renderer/styles/MainContent.scss
+++ b/src/renderer/styles/MainContent.scss
@@ -42,6 +42,7 @@
     position: relative;
     justify-content: flex-start;
     padding: 0 $spacing-xxs; // add some horizontal padding so the outline isn't cut off at either end
+    height: 100%;
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
