JAT-102: Setup fallback for case insensitive FS
Co-authored-by: Frank Wu <xenown@users.noreply.github.com>

--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -54,6 +54,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     justify-content: space-between;
     align-items: center;
 
+    // Ensure icons don't get pushed out of the way
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    column-gap: $spacing-s;
+
+    .preset-name {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
+
     .icons {
       display: none;
       gap: $spacing-s;
