--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -61,7 +61,7 @@ body {
 .middle-content {
   grid-area: middle-content;
   display: grid;
-  grid-template-rows: max-content 1fr;
+  grid-template-rows: repeat(3, max-content) 1fr;
   gap: $spacing-s;
 }
 
