--- a/src/renderer/styles/PresetsBar.scss
+++ b/src/renderer/styles/PresetsBar.scss
@@ -25,7 +25,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   // Spacing of the contents
   display: grid;
-  grid-template-rows: repeat(3, min-content) 1fr min-content;
+  grid-template-rows: repeat(3, min-content) minmax(0px, 1fr) min-content;
   padding: $spacing-m;
   gap: $spacing-s;
   justify-items: stretch;
